add swagger and add error handler middleware
