# src/Modules/batch-module/Routes/batch-route.ts
@@ -1,12 +1,13 @@
 import express from 'express'
 import {addStudent, newBatch, studentBatch} from '../controller/batch-controller'
+import { trycatch } from '../../../Middleware/trycatch'
 
 const router = express.Router()
 
 //add new batch
 
-router.post('/register',newBatch)
-router.post('/student/:id',addStudent)
-router.get('/student/:id',studentBatch)
+router.post('/register',trycatch(newBatch))
+router.post('/student/:id',trycatch(addStudent))
+router.get('/students/:id',trycatch(studentBatch))
 
 export default router
